= Changelog

== Version 1.0.0-Beta3 - Released xx.xx.xxxx

* Added method to add additional content to template with a filter (svenkubiak)
* Fixed bug in authentication which caused an error when authentication was injected (svenkubiak)
* Fixed bug in cache that throw an NPE when getType was called and value was not in cache (svenkubiak)
* Added missing interfaces methods to maven archetype (svenkubiak)

== Version 1.0.0-Beta2 - Released 23.07.2015

* https://github.com/svenkubiak/mangooio/issues/9[#9] Refactored dev mode exception page (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/15[#15] Added version tag to documentation (PDF and HTML) (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/16[#16] Fixed bug that result in wrong compilation when in dev mode (svenkubiak) 
* Cache is not autostarted anymore (svenkubiak)
* Fixed bug that throw NumberFormatException when passing an empty request parameter (svenkubiak)

== Version 1.0.0-Beta1 - Released 17.07.2015

* Added server "Undertow" token to response (svenkubiak)
* Added new lifecycle hook "applicationInitialized" (svenkubiak)
* Fixed bug that checked mode for testing incorrectly (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/10[#10] Added option to add additional headers to response (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/12[#12] Added option to autocast cache values (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/11[#11] Application name and secret is now generated from user input (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/13[#13] Archetype now takes root project version on generation (svenkubiak) 
* Updated documentation (svenkubiak)
* Sonar refactorings (svenkubiak)

== Version 1.0.0-Alpha3 - Released 15.06.2015

* https://github.com/svenkubiak/mangooio/issues/2[#2] Fixed flash passing between requests (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/1[#1] Fixed failing parameter tests (svenkubiak)