@@ -27,6 +27,6 @@ public class BinaryHandler implements HttpHandler {
         exchange.getResponseHeaders().put(Headers.CONTENT_DISPOSITION, "inline; filename=" + this.response.getBinaryFileName());
         exchange.getResponseHeaders().put(Headers.SERVER, Default.SERVER.toString());
         this.response.getHeaders().forEach((key, value) -> exchange.getResponseHeaders().add(key, value)); //NOSONAR
-        exchange.getOutputStream().write(this.response.getBinaryFile());
+        exchange.getOutputStream().write(this.response.getBinaryContent());
     }
 }
